add remove edit forward
